# searxng-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
config/: limiter.toml  settings.yml
docker/: entrypoint.sh
docs/: dockerhub.md
src/: config.py  html_utils.py  searxng_client.py  server.py
tests/: test_e2e.py  test_html_utils.py  test_server.py
