[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "searxng-mcp"
version = "0.1.1"
description = "MCP server that exposes SearXNG web search as a tool"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
